fix(various): logo theme change, scrollbars, etc

--- a/FrontEndMentor/35_kanban_task_app/frontend/src/assets/sass/base/_globals.scss
+++ b/FrontEndMentor/35_kanban_task_app/frontend/src/assets/sass/base/_globals.scss
@@ -31,6 +31,7 @@ body {
   text-rendering: optimizeSpeed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 img {
