--- a/FrontEndMentor/35_kanban_task_app/frontend/src/assets/sass/base/_themes.scss
+++ b/FrontEndMentor/35_kanban_task_app/frontend/src/assets/sass/base/_themes.scss
@@ -49,6 +49,8 @@ $light-theme: (
   input-text-default-active-text: #{$Black},
   input-text-default-active-placeholder: #{$col-2a},
   nav-h1: #{$col-1c},
+  nav-logo-dark: 1,
+  nav-logo-light: 0,
   task-card: #{$White},
   task-title: #{$Black},
   // text-p: #{$Dark_Grey},
@@ -88,6 +90,8 @@ $dark-theme: (
   input-text-default-active-text: #{$White},
   input-text-default-active-placeholder: #{$col-2b},
   nav-h1: #{$White},
+  nav-logo-dark: 0,
+  nav-logo-light: 1,
   task-card: #{$col-1e},
   task-title: #{$White},
   // text-p: #{$Dark_Grey},
