--- a/FrontEndMentor/35_kanban_task_app/frontend/src/components/column-grid/_ColumnGrid.module.scss
+++ b/FrontEndMentor/35_kanban_task_app/frontend/src/components/column-grid/_ColumnGrid.module.scss
@@ -1,3 +1,4 @@
+@use '#Sass/abstracts/colors' as c;
 @use '#Sass/abstracts/functions' as f;
 @use '#Sass/abstracts/media-queries' as mq;
 @use '#Sass/abstracts/mixins' as mx;
@@ -8,8 +9,27 @@
   width: 100%;
   height: 100%;
   padding: f.px2em(24);
-  overflow-x: scroll;
-  overflow-y: hidden;
+
+  overflow: overlay;
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: var(--thm-bg-main);
+  }
+  &::-webkit-scrollbar-corner {
+    background-color: var(--thm-bg-main);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: c.$col-1b;;
+    border-radius: 10px;
+    &:vertical:hover, 
+    &:horizontal:hover {
+      background-color: c.$col-1a;
+    }
+  }
 
   @include mq.media(mobile-all) {
     padding: f.px2em(24) f.px2em(16);
