--- a/FrontEndMentor/35_kanban_task_app/frontend/src/components/main/_Main.module.scss
+++ b/FrontEndMentor/35_kanban_task_app/frontend/src/components/main/_Main.module.scss
@@ -11,7 +11,6 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: calc(1);
   background-color: var(--thm-bg-main);
   border-top: 1px solid var(--thm-border-divider);
   transition: a.$Theme-transition-bg, a.$Theme-transition-border;
